// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Account /> should render correctly - index 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-bczRLJ gOFXdZ page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-hAZoDl gYvKRI"
    >
      <div
        class="sc-fnykZs hjiMPF"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-hAZoDl lnuFcM"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-fnykZs hjiMPF"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-hAZoDl lnuFcM"
    >
      <div
        class="sc-fnykZs hjiMPF"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with initial state 1`] = `
<div>
  <div
    class="sc-bczRLJ ikoAiL page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <h1
      class="sc-gsnTZi hUDWSp sc-kDDrLX cCIGfN"
    >
      Account
    </h1>
    <div
      class="account__control-panel"
    >
      <button
        class="sc-dIouRR kUeOfn account__button"
        type="button"
      >
        <span
          class="sc-dmRaPn kMnZZe"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-dIouRR hFFgMm outer"
        type="button"
      >
        <span
          class="sc-dmRaPn kMnZZe"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with initial state 2`] = `
<div>
  <div
    class="sc-bczRLJ ikoAiL page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <h1
      class="sc-gsnTZi hUDWSp sc-kDDrLX cCIGfN"
    >
      Account
    </h1>
    <div
      class="account__control-panel"
    >
      <button
        class="sc-dIouRR kUeOfn account__button"
        type="button"
      >
        <span
          class="sc-dmRaPn kMnZZe"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-dIouRR hFFgMm outer"
        type="button"
      >
        <span
          class="sc-dmRaPn kMnZZe"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with logOutError 1`] = `
<div>
  <div
    class="sc-bczRLJ ikoAiL page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <h1
      class="sc-gsnTZi hUDWSp sc-kDDrLX cCIGfN"
    >
      Account
    </h1>
    <div
      class="account__control-panel"
    >
      <button
        class="sc-dIouRR kUeOfn account__button"
        type="button"
      >
        <span
          class="sc-dmRaPn kMnZZe"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-dIouRR hFFgMm outer"
        type="button"
      >
        <span
          class="sc-dmRaPn kMnZZe"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with logOutResult 1`] = `
<div>
  <div
    class="sc-bczRLJ ikoAiL page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <h1
      class="sc-gsnTZi hUDWSp sc-kDDrLX cCIGfN"
    >
      Account
    </h1>
    <div
      class="account__control-panel"
    >
      <button
        class="sc-dIouRR kUeOfn account__button"
        type="button"
      >
        <span
          class="sc-dmRaPn kMnZZe"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-dIouRR hFFgMm outer"
        type="button"
      >
        <span
          class="sc-dmRaPn kMnZZe"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with loggingOut=true 1`] = `
<div>
  <div
    class="sc-bczRLJ ikoAiL page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <h1
      class="sc-gsnTZi hUDWSp sc-kDDrLX cCIGfN"
    >
      Account
    </h1>
    <div
      class="account__control-panel"
    >
      <button
        class="sc-dIouRR kUeOfn account__button"
        type="button"
      >
        <span
          class="sc-dmRaPn kMnZZe"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-dIouRR eJsbkS outer"
        disabled=""
        type="button"
      >
        <span
          class="sc-dmRaPn edSfXd"
        >
          Logout
        </span>
        <div
          aria-hidden="true"
          class="sc-kgflAQ cNZcHT"
        >
          <div
            class="sc-bjUoiL jLyPYU"
          >
            <div
              class="sc-idiyUo fLnBRz"
            />
            <div
              class="sc-idiyUo eukInX"
            />
            <div
              class="sc-idiyUo eCyvWk"
            />
            <div
              class="sc-idiyUo hRQhhZ"
            />
            <div
              class="sc-idiyUo hESrJe"
            />
            <div
              class="sc-idiyUo jMjEBb"
            />
            <div
              class="sc-idiyUo gCFvzP"
            />
            <div
              class="sc-idiyUo dQfRWj"
            />
          </div>
        </div>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with no user 1`] = `
<div>
  <div
    aria-label="Loading"
    class="sc-bczRLJ gOFXdZ page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <div
      class="sc-hAZoDl gYvKRI"
    >
      <div
        class="sc-fnykZs hjiMPF"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-hAZoDl lnuFcM"
      style="margin-top: 1.2rem;"
    >
      <div
        class="sc-fnykZs hjiMPF"
        style="margin-left: -0px;"
      />
    </div>
    <div
      class="sc-hAZoDl lnuFcM"
    >
      <div
        class="sc-fnykZs hjiMPF"
        style="margin-left: -0px;"
      />
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with requestVerificationEmailError 1`] = `
<div>
  <div
    class="sc-bczRLJ ikoAiL page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <h1
      class="sc-gsnTZi hUDWSp sc-kDDrLX cCIGfN"
    >
      Account
    </h1>
    <div
      class="account__control-panel"
    >
      <button
        class="sc-dIouRR kUeOfn account__button"
        type="button"
      >
        <span
          class="sc-dmRaPn kMnZZe"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-dIouRR hFFgMm outer"
        type="button"
      >
        <span
          class="sc-dmRaPn kMnZZe"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with requestVerificationEmailResult 1`] = `
<div>
  <div
    class="sc-bczRLJ ikoAiL page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <h1
      class="sc-gsnTZi hUDWSp sc-kDDrLX cCIGfN"
    >
      Account
    </h1>
    <div
      class="account__control-panel"
    >
      <button
        class="sc-dIouRR kUeOfn account__button"
        type="button"
      >
        <span
          class="sc-dmRaPn kMnZZe"
        >
          Get a new verification email
        </span>
      </button>
      <button
        class="sc-dIouRR hFFgMm outer"
        type="button"
      >
        <span
          class="sc-dmRaPn kMnZZe"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with requestingVerificationEmail=true 1`] = `
<div>
  <div
    class="sc-bczRLJ ikoAiL page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <h1
      class="sc-gsnTZi hUDWSp sc-kDDrLX cCIGfN"
    >
      Account
    </h1>
    <div
      class="account__control-panel"
    >
      <button
        class="sc-dIouRR gftcYP account__button"
        disabled=""
        type="button"
      >
        <span
          class="sc-dmRaPn edSfXd"
        >
          Get a new verification email
        </span>
        <div
          aria-hidden="true"
          class="sc-kgflAQ cNZcHT"
        >
          <div
            class="sc-bjUoiL jLyPYU"
          >
            <div
              class="sc-idiyUo fLnBRz"
            />
            <div
              class="sc-idiyUo eukInX"
            />
            <div
              class="sc-idiyUo eCyvWk"
            />
            <div
              class="sc-idiyUo hRQhhZ"
            />
            <div
              class="sc-idiyUo hESrJe"
            />
            <div
              class="sc-idiyUo jMjEBb"
            />
            <div
              class="sc-idiyUo gCFvzP"
            />
            <div
              class="sc-idiyUo dQfRWj"
            />
          </div>
        </div>
      </button>
      <button
        class="sc-dIouRR hFFgMm outer"
        type="button"
      >
        <span
          class="sc-dmRaPn kMnZZe"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;

exports[`<Account /> should render correctly with user with emailVerified=true 1`] = `
<div>
  <div
    class="sc-bczRLJ ikoAiL page-containerstyles__StyledPageContainer-sc-19l7k4-0"
    width="default"
  >
    <h1
      class="sc-gsnTZi hUDWSp sc-kDDrLX cCIGfN"
    >
      Account
    </h1>
    <div
      class="account__control-panel"
    >
      <button
        class="sc-dIouRR hFFgMm outer"
        type="button"
      >
        <span
          class="sc-dmRaPn kMnZZe"
        >
          Logout
        </span>
      </button>
    </div>
  </div>
</div>
`;
